# racing-game

./: .gitignore  .gitmodules  CMakeLists.txt
models/: cube.dae  pbr_balls.dae  quad_centered.dae  ship_1.dae  ship_1_collision.dae  ship_1_flame_left.dae  ship_1_flame_middle.dae  ship_1_flame_right.dae  skycube.dae  track_1.dae  track_2.dae
scripts/: follow.lua  frust.lua  player.lua  player_settings.lua  scene_0.lua  ship.lua  sun.lua  test.lua  test2.lua
shaders/: frag.spv  offscreen_frag.spv  offscreen_vert.spv  screen_frag.spv  screen_vert.spv  shadow_vert.spv  sky_frag.spv  sky_vert.spv  vert.spv
